# qkmj

./: .dockerignore  .gitignore  AI_PLAYER.md  CLIENT_CONTAINERIZATION.md  CMakeCache.txt  CMakeLists.txt  COMMANDS.md  Dockerfile  Dockerfile.client  Dockerfile.server  GEMINI.md  Makefile.am  Makefile.in  README.md  UNIT_TESTS.md  cloudbuild.yaml  cmake_install.cmake  configure  configure.ac  docker-compose.yml
.github/workflows/: ci.yml
agent/: .env  agent.py  deploy.py  eval_config.json  requirements.txt
agent/sample/: evalset697d1c.evalset.json  evalset77db84.evalset.json  evalset888213.evalset.json  evalseta16315.evalset.json  evalsetcbd0b9.evalset.json  evalsetfb44a1.evalset.json
conductor/: GCP_SETUP.md  deploy_server.sh  product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/tracks/gcp_deployment_20251223/: metadata.json  plan.md  spec.md
docs/: CLIENT_CONTAINERIZATION.md  CNAME  COMMANDS.md  PROTOCOL_MAPPING.md  REFACTOR_PLAN_MONGO.md
qkmjclient/: Makefile.am  Makefile.in  ai_client.c  ai_client.h  card.c  card.h  check.c  check.h  checkscr.c  checkscr.h  chkmake.c  chkmake.h  command.c  command.h  input.c  input.h  message.c  message.h  misc.c  misc.h  mjdef.h  protocol.c  protocol.h  protocol_def.h  qkmj.c  qkmj.h  screen.c  screen.h  socket.c  socket.h
qkmjserver/: Makefile.am  Makefile.in  config.h.in  configure  configure.ac  database.c  database.h  logger.c  logger.h  mjgps.c  mjgps.h  mjgps_mongo_helpers.c  mjgps_mongo_helpers.h  mjrec.c  mongo.c  mongo.h  mongo_test.c  session_manager.c  session_manager.h
terraform/: main.tf  outputs.tf  variables.tf
tests/: ai_debug_tool.c  ai_interactive_client.c  connection_test.c  kifu_tool.c  mock_qkmj.c  test_ai_client.cpp  test_logging.cpp  test_session_manager.cpp  verify_gce_deployment.sh
web/: index.html  template.html
